# python-server-sdk

./: .gitignore  README.md  compile_proto.sh  dev-requirements.txt  docker-compose-test.yaml  docker-compose.yaml  generate_client.sh  index.html  mkdocs.yml  notifier_test.py  openapi-python-client-config.yaml  openapi.yaml  pdoc.sh  poetry_scripts.py  pylint.sh  pylint_format.sh  pylintrc  pyproject.toml  requirements.txt  test_command.py  test_commands.py  test_dupa.py  versions.json
jellyfish/: __init__.py  _notifier.py  _recording_api.py  _room_api.py  _webhook_notifier.py  _ws_notifier.py  errors.py  notifier.py  pyproject.toml  room_api.py  room_client.py  setup.py
jellyfish/_openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  types.py
jellyfish/_openapi_client/api/: __init__.py  default_api.py  hls_api.py  recording_api.py  room_api.py
jellyfish/_openapi_client/api/default/: healthcheck.py
jellyfish/_openapi_client/api/health/: healthcheck.py
jellyfish/_openapi_client/api/hls/: get_hls_content.py  subscribe_hls_to.py  subscribe_tracks.py
jellyfish/_openapi_client/api/recording/: delete_recording.py  get_recording_content.py  get_recordings.py
jellyfish/_openapi_client/api/room/: add_component.py  add_peer.py  create_room.py  delete_component.py  delete_peer.py  delete_room.py  get_all_rooms.py  get_room.py  subscribe_to.py
jellyfish/_openapi_client/api/sip/: dial.py  end_call.py
jellyfish/_openapi_client/models/: __init__.py  add_component_json_body.py  add_component_request.py  add_peer_json_body.py  add_peer_request.py  component.py  component_details_response.py  component_file.py  component_hls.py  component_metadata_hls.py  component_options.py  component_options_file.py  component_options_hls.py  component_options_hls_subscribe_mode.py  component_options_hlss3.py  component_options_recording.py  component_options_rtsp.py  component_options_sip.py  component_properties_file.py  component_properties_hls.py  component_properties_hls_subscribe_mode.py  component_properties_recording.py  component_properties_recording_subscribe_mode.py  component_properties_rtsp.py  component_properties_sip.py  component_properties_sipsip_credentials.py  component_rtsp.py  component_sip.py  credentials.py  dial_config.py  error.py  health_report.py  health_report_distribution.py  health_report_status.py  healthcheck_response.py  hls_skip.py  peer.py  peer_details_response.py  peer_details_response_data.py  peer_options.py  (+15 more)
jellyfish/_protos/: jellyfish.py
jellyfish/api/: _base_api.py  _recording_api.py  _room_api.py
jellyfish/events/: __init__.py
jellyfish/events/_protos/: jellyfish.py
jellyfish/events/_protos/jellyfish/: __init__.py
jellyfish/openapi_client/: .gitlab-ci.yml  .travis.yml  README.md  __init__.py  api_client.py  configuration.py  pyproject.toml  rest.py  setup.py  tox.ini
jellyfish/openapi_client/.github/workflows/: python.yml
jellyfish/openapi_client/.openapi-generator/: FILES
jellyfish/openapi_client/api/: __init__.py  default_api.py  room_api.py
jellyfish/openapi_client/docs/: AddComponentRequest.md  AddPeerRequest.md  Component.md  ComponentDetailsResponse.md  ComponentMetadata.md  ComponentOptions.md  ComponentOptionsRTSP.md  DefaultApi.md  Error.md  HlsSkip.md  Peer.md  PeerDetailsResponse.md  PeerDetailsResponseData.md  PeerOptions.md  PeerOptionsWebRTC.md  PeerStatus.md  Room.md  RoomApi.md  RoomConfig.md  RoomCreateDetailsResponse.md  RoomCreateDetailsResponseData.md  RoomDetailsResponse.md  RoomsListingResponse.md
jellyfish/openapi_client/jellyfish_openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
jellyfish/openapi_client/jellyfish_openapi_client/api/: __init__.py  default_api.py  room_api.py
jellyfish/openapi_client/jellyfish_openapi_client/models/: __init__.py  add_component_request.py  add_peer_request.py  component.py  error.py  peer.py  (+10 more)
jellyfish/openapi_client/models/: __init__.py  add_component_request.py  add_peer_request.py  component.py  component_details_response.py  component_options.py  component_options_rtsp.py  peer.py  peer_details_response.py  peer_details_response_data.py  peer_options.py  peer_status.py  room.py  room_create_details_response.py  room_create_details_response_data.py  room_details_response.py  rooms_listing_response.py
jellyfish/openapi_client/test/: test_add_component_request.py  test_add_peer_request.py  test_component.py  test_component_details_response.py  test_component_metadata.py  test_component_options.py  test_component_options_rtsp.py  test_default_api.py  test_error.py  test_hls_skip.py  test_peer.py  test_peer_details_response.py  test_peer_details_response_data.py  test_peer_options.py  test_peer_options_web_rtc.py  test_peer_status.py  test_room.py  test_room_api.py  test_room_config.py  test_room_create_details_response.py  test_room_create_details_response_data.py  test_room_details_response.py  test_rooms_listing_response.py
jellyfish/protos/jellyfish/: peer_notifications_pb2.py  server_notifications_pb2.py
(+202 files in other folders)
