[tool.poetry]
name = "jellyfish-server-sdk"
version = "0.4.0"
description = "Python server SDK for the Jellyfish media server"
authors = ["Jellyfish Team"]
homepage = "https://github.com/jellyfish-dev/python-server-sdk"
documentation = "https://jellyfish-dev.github.io/python-server-sdk/jellyfish"
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "jellyfish" }]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^11.0.3"
urllib3 = ">=1.25.3,<2"
aenum = "^3.1.15"
python-dateutil = "^2.8.2"
betterproto = "2.0.0b6"
httpx = ">=0.20.0,<0.26.0"
attrs = ">=21.3.0"

[tool.poetry.group.dev.dependencies]
betterproto = { version = "= 2.0.0b6", extras = ["compiler"] }
pdoc = "^14.1.0"
mkdocs = "^1.5.3"
mike = "^2.0.0"
openapi-python-client = "^0.16.0"
ruff = "^0.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
flask = "^3.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ci_test = "poetry_scripts:run_tests"
local_test = "poetry_scripts:run_local_test"
format = "poetry_scripts:run_formatter"
format_check = "poetry_scripts:run_format_check"
lint = "poetry_scripts:run_linter"
fix_lint = "poetry_scripts:run_linter_fix"
generate_docs = "poetry_scripts:generate_docs"
update_client = "poetry_scripts:update_client"
examples = "poetry_scripts:run_examples"

[tool.ruff]
select = ["F", "I"]

[tool.ruff.lint]
select = ["F", "I", "E"]
ignore = []

[tool.ruff.extend-per-file-ignores]
"jellyfish/_openapi_client/**" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "file_component_sources: Tests requiring files uploaded for File Component"
]
