[tool.poetry]
name = "jellyfish-server-sdk"
version = "0.1.0"
description = "Python server SDK for Jellyfish Media Server"
authors = ["Membrane Team https://github.com/membraneframework"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/jellyfish-dev/python-server-sdk"


[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools ~= 68.1"]
build-backend = "setuptools.build_meta"
